--- a/code/Blazora/Components/Cellicon.razor
+++ b/code/Blazora/Components/Cellicon.razor
@@ -170,9 +170,9 @@
     {
         base.listener_setup ();
         
-        listener_add (this.stack_val_current);
-        listener_add (this.stack_val_max);
-        listener_add (this.hover);
+        listener_add ("Cellicon val_current", this.stack_val_current);
+        listener_add ("Cellicon val_max", this.stack_val_max);
+        listener_add ("Cellicon hover", this.hover);
     }
 
 
