--- a/code/Blazora/Components/Cellicon.razor
+++ b/code/Blazora/Components/Cellicon.razor
@@ -170,8 +170,8 @@
     {
         base.listener_setup ();
         
-        listener_add ("Cellicon val_current", this.stack_val_current);
-        listener_add ("Cellicon val_max", this.stack_val_max);
+        //listener_add ("Cellicon val_current", this.stack_val_current);
+        //listener_add ("Cellicon val_max", this.stack_val_max);
         listener_add ("Cellicon hover", this.hover);
     }
 
