--- a/code/Blazora/Components/Game_Component.razor
+++ b/code/Blazora/Components/Game_Component.razor
@@ -72,7 +72,7 @@
         }
         observable.changed += refresh;
         
-        Console.WriteLine ($"Listener for Game_Component {this.id} with [{observable.id}]{info}");
+        Console.WriteLine ($"Listener for Game_Component {this.id} with [{observable.id}]{info} (total listener: {observable.get_listener_count ()})");
 
         if (dico_typ_plus_list_observable.ContainsKey (typeof(T)) == false)
         {
