--- a/code/Blazora/Components/BGenerator_Header_Machine.razor
+++ b/code/Blazora/Components/BGenerator_Header_Machine.razor
@@ -43,4 +43,13 @@
         listener_add ("tool", get_stack_tool ().observable_quantity);
     }
 
+
+    
+    protected override void OnInitialized ()
+    {
+        this.id = $"BGenerator_Header_Machine {get_result_resource_name ()}";
+        base.OnInitialized ();
+    }
+
+
 }
