--- a/code/Blazora/Components/BGenerator_Header_Hand.razor
+++ b/code/Blazora/Components/BGenerator_Header_Hand.razor
@@ -19,3 +19,14 @@
 <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
             position=@(new Position (s*4, s*(this.recipe.get_component_count ()-1), s, s))
             />
+
+
+@code{
+    
+    protected override void OnInitialized ()
+    {
+        this.id = $"BGenerator_Header_Hand {get_result_resource_name ()}";
+        base.OnInitialized ();
+    }
+
+}
