--- a/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
+++ b/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
@@ -36,6 +36,14 @@
 
 <!-- Line 1 -->
 <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
-            position=@(new Position (s*1, s*(this.recipe.get_component_count ()-1), s, s))
+            position=@(new Position (s * 1, s * (this.recipe.get_component_count () - 1), s, s))
             />
+@code{
+    
+    protected override void OnInitialized ()
+    {
+        this.id = $"BGenerator_Header_Pickaxe {get_result_resource_name ()}";
+        base.OnInitialized ();
+    }
 
+}
